--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
     "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "start": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "babel-loader": "^8.2.4",
     "css-loader": "^6.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.5.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
